# chalice-app-template

./: .env-example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  setup.cfg
.chalice/: config-dev.json.vault
.chalice/deployed/: dev.json.vault  prod.json.vault
.github/workflows/: chalice-deployment.yml
chalicelib/: jinja_templates.py
chalicelib/apps/: __init__.py  dashboard.py
chalicelib/apps/cron/: cron.py
chalicelib/templates/: base.html
tests/: conftest.py  test_app.py
